# cosmic-applet-google

./: AGENTS.md  Cargo.toml  README.md  justfile
cosmic-applet-gmail/: Cargo.toml
cosmic-applet-gmail/src/: app.rs  config.rs  main.rs  settings.rs
cosmic-applet-google-agenda/: Cargo.toml
cosmic-applet-google-agenda/src/: app.rs  config.rs  debug.rs  main.rs  settings.rs
cosmic-google-common/: Cargo.toml
cosmic-google-common/src/: auth.rs  lib.rs  secrets.rs
src/: secrets.rs
